Add banner and video. Need to edit

--- a/src/site/The-Enough-Effect.njk
+++ b/src/site/The-Enough-Effect.njk
@@ -8,15 +8,6 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
 
     <!-- Parralex hero section -->
     <section class="being-enough-hero-container">
-        <div class="parallax-container contact-hero-parallax-window"></div>
-        <div class="being-enough-hero-parallax">
-            <h1 class="sect-title">
-                Being Enough
-            </h1>
-            <h2 class="sect-subtitle">
-                The 7 Week Program
-            </h2>
-        </div>
     </section>
     <!-- END: parralex hero section -->
 
@@ -46,14 +37,7 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
     <!-- video section -->
     <section class="video-section">
         <div class="video-embed-container">
-            <video class="video-embed" controls width="250">
-                <source src="/static/vid/being-enough-intro.mp4"
-                        type="video/webm">
-
-                <source src="/static/vid/being-enough-intro.mp4"
-                        type="video/mp4">
-                Sorry, your browser doesn't support embedded videos.
-            </video>
+            <iframe src="https://player.vimeo.com/video/598397781?h=eaf32f9bb4" width="640" height="1357" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
         </div>
         <a class="btn-dark-pink services-cta-btn bg-red" href="#paymentSection">Book your spot!</a>
     </section>
@@ -297,10 +281,6 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
                 <p class="known-for-text normal-text">A beautiful sound healing experience</p>
             </div>
             <div class="known-for-item">
-                <i class="fas fa-users"></i>
-                <p class="known-for-text normal-text">An entirely optional members-only social media group.  This is to provide a space to share, connect, learn, discuss or simply observe.  However you feel called to participate will be absolutely right for you.</p>
-            </div>
-            <div class="known-for-item">
                 <i class="fab fa-whatsapp-square"></i>
                 <p class="known-for-text normal-text">Direct access to me via the social media group and bi monthly Q&A</p>
             </div>
@@ -311,6 +291,10 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
             <div class="known-for-item">
                 <i class="fas fa-spa"></i>
                 <p class="known-for-text normal-text">An exclusive guest workshop from an incredible body and mindset coach.</p>
+            </div>
+            <div class="known-for-item">
+                <i class="fas fa-users"></i>
+                <p class="known-for-text normal-text">An entirely optional members-only social media group.  This is to provide a space to share, connect, learn, discuss or simply observe.</p>
             </div>
         </div>
     </section>
@@ -372,36 +356,3 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
     </section>
     <!-- END: payment options -->
 
-    <!-- FAQ -->
-    <section class="faq-section">
-        <h2 class="faq-title sect-title">
-            Frequently asked questions
-        </h2>
-        <div class="faq-content">
-            <div class="faq-item">
-                <h3 class="sect-subtitle who-for-sub faq-sub">How many people will be in the group?</h3>
-                <p class="normal-text">
-                    A personal disaster was absolutely the trigger point for me radically changing my life for the better. I knew I wanted to.
-                </p>
-            </div>
-            <div class="faq-item">
-                <h3 class="sect-subtitle who-for-sub faq-sub">Do I have to talk?</h3>
-                <p class="normal-text">
-                    The main differences are length of program, frequency of sessions and depth of discovery and therefore, change. 
-                </p>
-            </div>
-            <div class="faq-item">
-                <h3 class="sect-subtitle who-for-sub faq-sub">What if I miss a week?</h3>
-                <p class="normal-text">
-                    Of course. I make it a priority to only take on clients for whom coaching is right and I am a good fit for.  
-                </p>
-            </div> 
-            <div class="faq-item">
-                <h3 class="sect-subtitle who-for-sub faq-sub">How do I know it's right for me?</h3>
-                <p class="normal-text">
-                    Yes! I absolutely love the clients I sign up to my program, as such I offer a 10% refer a dream boat discount. 
-                </p>
-            </div> 
-        </div>
-    </section>
-    <!-- END: FAQ -->
