--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13214,7 +13214,7 @@ input[type='checkbox'] {
 
 .being-enough-hero-container {
   position: relative;
-  background-image: url("../img/Mhairi_pics/enough_effect_mobile.jpeg");
+  background-image: url("../img/Mhairi_pics/Untitled design.png");
   background-position: 50% 5%;
   background-repeat: no-repeat;
   background-size: contain;
@@ -13439,7 +13439,7 @@ input[type='checkbox'] {
 .video-embed-container {
   width: 21em;
   margin: 0 auto 2em auto;
-  height: auto;
+  height: 46em;
 }
 
 @media only screen and (min-width: 500px) and (max-width: 767px) {
@@ -13475,6 +13475,7 @@ input[type='checkbox'] {
 
 .video-embed-container iframe {
   width: 100%;
+  height: 100%;
 }
 
 .video-embed {
