--- a/static/scss/pages/_being_enough.scss
+++ b/static/scss/pages/_being_enough.scss
@@ -5,33 +5,34 @@
 .being-enough-hero-container{
     position: relative;
     // background-image: url("../img/Mhairi_pics/enough_effect_mobile.jpeg");
-    background-image: url("../img/Mhairi_pics/Untitled design.png");
+    background-image: url("../img/Mhairi_pics/enough_effect_sm.jpeg");
     background-position: 50% 5%;
     background-repeat: no-repeat;
     background-size: contain;
-    min-height: 21em;
+    min-height: 27em;
     @media #{$breakpoint-sm}{
-        min-height: 34em;
+        background-image: url("../img/Mhairi_pics/enough_effect_sm.jpeg");
+        min-height: 36em;
     }
     @media #{$breakpoint-min-md}{
         background-image: url("../img/Mhairi_pics/enough_effect_large_banner.jpeg");
         background-position: 50% 5%;
         background-repeat: no-repeat;
         background-size: contain;
-        min-height: 23em;
+        min-height: 17em;
         margin-top: .5em;
     }
     @media #{$breakpoint-lg}{
         background-position: 50% 0%;
-        min-height: 17em;
+        min-height: 19em;
     }
     @media #{$breakpoint-xl}{
         background-position: 50% 10%;
-        min-height: 19em;
+        min-height: 21em;
     }
     @media #{$breakpoint-xxl}{
         background-position: 50% 15%;
-        min-height: 22em;
+        min-height: 24em;
     }
     // .parallax-container{
     //     @media #{$breakpoint-min-md}{
