--- a/src/site/The-Enough-Effect.njk
+++ b/src/site/The-Enough-Effect.njk
@@ -16,8 +16,7 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
         <div class="home-sub-hero-content ceremony-sub-content">
             <h1 class="sect-title about-title pink-text">Welcome my lovely, I’m so delighted you are here!</h1>
         </div>
-        <hr class="half-width-hr">
-                <div class="simple-section-text">
+        <div class="simple-section-text">
             <p class="normal-text">
                 I know how hard it is when your best doesn’t feel good enough. Your successes feel like luck and the pressure of ‘getting it right’ is so overwhelming it can stop you doing anything at all.
             </p>
@@ -28,11 +27,31 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
                 The good news is, you’re reading this now which is a step in the right direction. 
             </p>
             <p class="normal-text">
-                Now grab a cup of coffee (and a biscuit) babes and let me tell you in this short video how to continue your journey to ‘Being Enough”.
+                Now grab a cup of coffee (and a biscuit) babes and let me tell you in this short video everything you need to know about The Enough Effect, my life-changing group coaching course. 
+                Yes that’s a bold statement, but based on client feedback from those that have gone before you, it’s one I absolutely stand by.
             </p>
         </div>
     </section>    
     <!-- END: intro section -->
+
+    <hr class="half-width-hr">
+
+    <!-- stand alone testimonial -->
+    <div class="testimonial-alone">
+        <div class="testimonial-alone-exert">
+            <p>
+                “I can honestly say it’s change my life.”
+            </p>
+        </div>
+        <div class="testimonial-alone-author">
+            <h3 class="rob-font testimonial-alone-author-job">
+                - Previous Course Attendee 
+            </h3>
+        </div>
+    </div>
+    <!-- END: stand alone testimonial -->
+
+    <hr class="half-width-hr">
 
     <!-- video section -->
     <section class="video-section">
@@ -75,7 +94,7 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
                 </ul>
             </div>
             <p class="normal-text">
-                It's with that intention I have created this program. To help you finally and fully stand in your own worth, unlock the parts of you limiting your joy and be guided to navigate those. 
+                It's with that intention I have created this program. To help you finally and fully stand in your own worth, unlock the limits on your joy and start your journey towards the life you deserve and desire.
             </p>
         </div>
     </section>
@@ -233,7 +252,7 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
                         </li>
                         <li class="workshop-includes-item">
                             <i class="far fa-check-circle"></i>
-                            <span class="workshop-includes-item-text">Pssst Look out for the exclusive bonus guest workshop from a wonderful Body and Mindset coach.</span>
+                            <span class="workshop-includes-item-text">In addition you will enjoy an exclusive bonus guest workshop from a wonderful Body and Mindset coach.</span>
                         </li>
                     </ul>
                 </div>
@@ -308,7 +327,7 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
         </h2>
         <div class="simple-section-text">
             <p class="normal-text">
-                The program costs £255.  You can choose from several direct debit payment options to best suit you.  The first payment will be taken on 31st October and each month thereafter until the total is paid. 
+                The program costs £255. You can choose from several direct debit payment options to best suit you.  The first payment will be taken soon after signing up and the same day each month thereafter until the total is paid. 
             </p>
             <p class="normal-text">
                 Payments are processed with <a href="https://gocardless.com/" target="_blank">GoCardless</a>. Selecting an option below will take you to the GoCardless registration page where you will complete a registration form.
