--- a/src/site/The-Enough-Effect.njk
+++ b/src/site/The-Enough-Effect.njk
@@ -1,7 +1,7 @@
 ---
 
 layout: 'base.njk'
-title: 'Being Enough - the 6 week program with Mhairi Todd - The Roadblock Coach'
+title: 'The Enough Effect - the 7 week program with Mhairi Todd - The Roadblock Coach'
 metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolute essentials to get you from never enough to a full cup.'
 
 ---
@@ -369,7 +369,7 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
                     </div>
                     <a id="beingEnoughBtn" class="btn-dark-pink sign-me-up-btn bg-blue" href="" target="_blank">Book your spot!</a>
                 </form>
-                <p class="payment-small-text">*Payments by GoCardless. Read the <a href="https://gocardless.com/privacy" target="_blank">GoCardless privacy notice.</a> The Enough Effect Program <a href="/being-enough-terms" target="_blank"> Ts & Cs</a></p>
+                <p class="payment-small-text">*Payments by GoCardless. Read the <a href="https://gocardless.com/privacy" target="_blank">GoCardless privacy notice.</a> The Enough Effect Program <a href="/the-enough-effect-terms" target="_blank"> Ts & Cs</a></p>
             </div>    
         </div>
     </section>
