Remove enough effect from nav

--- a/src/site/The-Enough-Effect.njk
+++ b/src/site/The-Enough-Effect.njk
@@ -55,6 +55,7 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
 
     <!-- video section -->
     <section class="video-section">
+        <a id="enough-effect-intro" ></a>
         <div class="video-embed-container">
             <iframe src="https://player.vimeo.com/video/598397781?h=eaf32f9bb4" width="640" height="1357" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
         </div>
