--- a/src/site/The-Enough-Effect.njk
+++ b/src/site/The-Enough-Effect.njk
@@ -57,7 +57,8 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
     <section class="video-section">
         <a id="enough-effect-intro" ></a>
         <div class="video-embed-container">
-            <iframe src="https://player.vimeo.com/video/598397781?h=eaf32f9bb4" width="640" height="1357" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+            {# <iframe src="https://player.vimeo.com/video/598397781?h=eaf32f9bb4" width="640" height="1357" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe> #}
+            <iframe src="https://player.vimeo.com/video/598397781?h=eaf32f9bb4&title=0&byline=0&portrait=0" width="640" height="1357" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
         </div>
         <a class="btn-dark-pink services-cta-btn bg-red" href="#paymentSection">Book your spot!</a>
     </section>
