Add in closing page

--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -46,7 +46,8 @@
   'pages/opening_workshop',
   'pages/cc_workshop',
   'pages/being_enough',
-  'pages/la_workshop';
+  'pages/la_workshop',
+  'pages/closing_ceremony';
 
 // 7. Themes
 @import
