--- a/src/site/includes/base.njk
+++ b/src/site/includes/base.njk
@@ -64,6 +64,9 @@
                     <a href="#" class="dropdown-toggle nav-item rob-font" data-toggle="dropdown">Events</a>
                     <div class="dropdown-menu nav-item rob-font">
                         <div class="dropdown-item">
+                                <a href="/2021-closing-ceremony" class="">2021 Closing Ceremony</a>
+                        </div>
+                        <div class="dropdown-item">
                             <a href="/business-workshops/limitless-abundance" class="">Limitless Abundance <br class="d-lg-none"> Workshop</a>
                         </div>
                         <div class="dropdown-item">
