--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14551,4 +14551,104 @@ html {
     height: 22.5em;
   }
 }
+
+.cw-workshop-hero {
+  background-image: url(../img/Mhairi_pics/yellow-lean-fence.jpeg);
+  background-position: 90% 40%;
+  background-attachment: scroll;
+}
+
+@media only screen and (min-width: 768px) {
+  .cw-workshop-hero {
+    background-position: 90% 0%;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .cw-workshop-hero .parallax-container {
+    min-height: 22.5em;
+  }
+}
+
+.cw-circle-img {
+  height: 21em;
+  width: 21em;
+  margin: 4em auto;
+}
+
+@media only screen and (min-width: 992px) {
+  .cw-circle-img {
+    width: 18em;
+    height: 18em;
+  }
+}
+
+.cw-circle-img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 100%;
+  -o-object-position: 50% 35%;
+     object-position: 50% 35%;
+}
+
+.simple-section-testimonial-alone-exert {
+  width: 90%;
+  color: #aa9659;
+  text-align: center;
+  margin: 0em auto 1em auto;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .simple-section-testimonial-alone-exert {
+    margin: 0em auto 1em auto;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .simple-section-testimonial-alone-exert {
+    margin: 0em auto 1em auto;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .simple-section-testimonial-alone-exert {
+    margin: 0em auto 1em auto;
+  }
+}
+
+.simple-section-testimonial-alone-exert p {
+  font-size: 1.7em;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .simple-section-testimonial-alone-exert p {
+    font-size: 1.4em;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .simple-section-testimonial-alone-exert p {
+    font-size: 1.2em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .simple-section-testimonial-alone-exert p {
+    font-size: 1em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .simple-section-testimonial-alone-exert p {
+    font-size: 1.1em;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .simple-section-testimonial-alone-exert p {
+    font-size: 1em;
+  }
+}
 /*# sourceMappingURL=main.css.map */
