Add closing ceremony function

--- a/src/site/2021-closing-ceremony.njk
+++ b/src/site/2021-closing-ceremony.njk
@@ -52,12 +52,12 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
             </div>
             <div class="about-cta-btn">
                 <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
-                    data-item-id="#OC1"
-                    data-item-price="10"
-                    data-item-url="/opening-workshop"
-                    data-item-description="2021 Opening Workshop - Replay"
+                    data-item-id="#CC1"
+                    data-item-price="15"
+                    data-item-url="/2021-closing-ceremony"
+                    data-item-description="2021-closing-ceremony"
                     data-item-image=""
-                    data-item-name="2021 Opening Workshop">
+                    data-item-name="2021-closing-ceremony">
                     Get your ticket
                 </button>
             </div>
@@ -102,12 +102,12 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
         </div>
         <div class="about-cta-btn">
             <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
-                data-item-id="#OC1"
-                data-item-price="10"
-                data-item-url="/opening-workshop"
-                data-item-description="2021 Opening Workshop - Replay"
+                data-item-id="#CC1"
+                data-item-price="15"
+                data-item-url="/2021-closing-ceremony"
+                data-item-description="2021-closing-ceremony"
                 data-item-image=""
-                data-item-name="2021 Opening Workshop">
+                data-item-name="2021-closing-ceremony">
                 Get your ticket
             </button>
         </div>
@@ -147,13 +147,13 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
             </div>
             <div class="about-cta-btn">
                 <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
-                    data-item-id="#OC1"
-                    data-item-price="10"
-                    data-item-url="/opening-workshop"
-                    data-item-description="2021 Opening Workshop - Replay"
+                    data-item-id="#CC1"
+                    data-item-price="15"
+                    data-item-url="/2021-closing-ceremony"
+                    data-item-description="2021-closing-ceremony"
                     data-item-image=""
-                    data-item-name="2021 Opening Workshop">
-                    Get your ticket
+                    data-item-name="2021-closing-ceremony">
+                    Get your ticket                
                 </button>
             </div>
         </div>
@@ -211,12 +211,12 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
         </div>
         <div class="about-cta-btn">
             <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
-                data-item-id="#OC1"
-                data-item-price="10"
-                data-item-url="/opening-workshop"
-                data-item-description="2021 Opening Workshop - Replay"
+                data-item-id="#CC1"
+                data-item-price="15"
+                data-item-url="/2021-closing-ceremony"
+                data-item-description="2021-closing-ceremony"
                 data-item-image=""
-                data-item-name="2021 Opening Workshop">
+                data-item-name="2021-closing-ceremony">
                 Get your ticket
             </button>
         </div>
@@ -289,12 +289,12 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
     <section class="stand-alone-cta-btn">
         <div class="about-cta-btn max-content-width">
             <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
-                data-item-id="#OC1"
-                data-item-price="10"
-                data-item-url="/opening-workshop"
-                data-item-description="2021 Opening Workshop - Replay"
+                data-item-id="#CC1"
+                data-item-price="15"
+                data-item-url="/2021-closing-ceremony"
+                data-item-description="2021-closing-ceremony"
                 data-item-image=""
-                data-item-name="2021 Opening Workshop">
+                data-item-name="2021-closing-ceremony">
                 JOIN ME FOR 2021 OPENING WORKSHOP 
             </button>
         </div>
