Edit snipcart data

--- a/src/site/2021-closing-ceremony.njk
+++ b/src/site/2021-closing-ceremony.njk
@@ -55,9 +55,9 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
                     data-item-id="#CC1"
                     data-item-price="15"
                     data-item-url="/2021-closing-ceremony"
-                    data-item-description="2021-closing-ceremony"
+                    data-item-description="2021 Closing Ceremony with Mhairi Todd"
                     data-item-image=""
-                    data-item-name="2021-closing-ceremony">
+                    data-item-name="2021 Closing Ceremony">
                     Get your ticket
                 </button>
             </div>
@@ -105,9 +105,9 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
                 data-item-id="#CC1"
                 data-item-price="15"
                 data-item-url="/2021-closing-ceremony"
-                data-item-description="2021-closing-ceremony"
+                data-item-description="2021 Closing Ceremony with Mhairi Todd"
                 data-item-image=""
-                data-item-name="2021-closing-ceremony">
+                data-item-name="2021 Closing Ceremony">
                 Get your ticket
             </button>
         </div>
@@ -150,9 +150,9 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
                     data-item-id="#CC1"
                     data-item-price="15"
                     data-item-url="/2021-closing-ceremony"
-                    data-item-description="2021-closing-ceremony"
+                    data-item-description="2021 Closing Ceremony with Mhairi Todd"
                     data-item-image=""
-                    data-item-name="2021-closing-ceremony">
+                    data-item-name="2021 Closing Ceremony">
                     Get your ticket                
                 </button>
             </div>
@@ -214,9 +214,9 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
                 data-item-id="#CC1"
                 data-item-price="15"
                 data-item-url="/2021-closing-ceremony"
-                data-item-description="2021-closing-ceremony"
+                data-item-description="2021 Closing Ceremony with Mhairi Todd"
                 data-item-image=""
-                data-item-name="2021-closing-ceremony">
+                data-item-name="2021 Closing Ceremony">
                 Get your ticket
             </button>
         </div>
@@ -292,9 +292,9 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
                 data-item-id="#CC1"
                 data-item-price="15"
                 data-item-url="/2021-closing-ceremony"
-                data-item-description="2021-closing-ceremony"
+                data-item-description="2021 Closing Ceremony with Mhairi Todd"
                 data-item-image=""
-                data-item-name="2021-closing-ceremony">
+                data-item-name="2021 Closing Ceremony">
                 JOIN ME FOR 2021 OPENING WORKSHOP 
             </button>
         </div>
