Make mhairi edit to cc

--- a/src/site/2021-closing-ceremony.njk
+++ b/src/site/2021-closing-ceremony.njk
@@ -29,8 +29,7 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
                     What
                 </h4>
                 <p class="normal-text">
-                    A soul soothing, spirit calming, path clearing workshop of joy babes! 
-                    This 1hr lecture style workshop will bring us together to close 2021 learning the lessons we require in order to achieve all we desire. Oofft.
+                   Soothe the soul and clear your path
                 </p>
             </div>
             <div class="ceremony-what-item">
@@ -39,7 +38,8 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
                 </h4>
                 <p class="normal-text">
                     Wednesday 22nd December 
-                    8pm- 9pm GMT (replay available)
+                    8pm- 9pm GMT 
+                    (replay available)
                 </p>
             </div>
             <div class="ceremony-what-item">
@@ -85,16 +85,16 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
         </div>
         <div class="simple-section-text">
             <p class="normal-text">
-                I don’t know about you, but life feels more hectic than ever and it’s easy to feel like you are being carried along rather than actively choosing your path (2022, already?!).  This workshop seeks to be the antidote to that.
+                I don’t know about you, but life seems more hectic than ever and it’s easy to feel like you are being carried along rather than actively choosing your path (2022, already?!).  This workshop seeks to be the antidote to that.
             </p>
             <p class="normal-text">
                 On Wednesday 22nd December we come together to close this year in a way that soothes the soul and clears your path to more joy.
             </p>
             <p class="normal-text">
-                Using a unique method never before seen in my workshops, we will reflect on this year leaving behind unhelpful energy as we allow ourselves to step forward into our next level for 2022.
+                Using a unique method never before seen in my workshops, we will reflect on this year, leave behind unhelpful energy and allow ourselves to step forward into the next level for 2022.
             </p>
             <p class="normal-text">
-               Through carefully crafted exercises we will step out of the pattern that’s holding you back, learn to forgive past mistakes and set out our invitation for who we want to be in the New Year.
+               Through carefully crafted exercises we will identify your holding pattern, learn to forgive past mistakes and set out an invitation for who you want to be in the New Year.
             </p>
             <p class="normal-text">
                 So bring a tipple of your choice as we celebrate endings and toast to new beginnings.
@@ -133,7 +133,7 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
                     </li>
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
-                        <span class="workshop-includes-item-text">We will come together to step out of our unique holding pattern.</span>
+                        <span class="workshop-includes-item-text">Together we will identify and move through your unique holding pattern.</span>
                     </li>
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
@@ -141,7 +141,7 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
                             I then lead you through a set of powerful exercises to reflect on yourself and gain insights on who you are and what you want for the New Year.</span>
                     </li>
                     <li class="workshop-includes-item">
-                        <span class="workshop-includes-item-text fw-b">So pour yourself a glass and let's toast to the only way you are going...forward my beauty!</span>
+                        <span class="workshop-includes-item-text fw-b">So pour yourself a glass of something delicious babes and let's toast to the only way you are going...forward my beauty!</span>
                     </li>
                 </ul>
             </div>
@@ -240,7 +240,7 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
                 </li>
                 <li class="workshop-includes-item">
                     <i class="far fa-check-circle"></i>
-                    <span class="workshop-includes-item-text">The knowledge of how to turn these insights into a way forward.</span>
+                    <span class="workshop-includes-item-text">The method to turn these insights into a way forward.</span>
                 </li>
                 <li class="workshop-includes-item">
                     <i class="far fa-check-circle"></i>
