--- a/src/site/2021-closing-ceremony.njk
+++ b/src/site/2021-closing-ceremony.njk
@@ -20,7 +20,7 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
     <!-- intro section -->
     <section class="services-intro testimonial-intro you-will-gain-section">
         <div class="home-sub-hero-content ceremony-sub-content">
-            <h1 class="sect-title about-title pink-text">Let’s close 2021 in a way that soothes the soul and clears your path to more joy</h1>
+            <h1 class="sect-title about-title pink-text">Soothe the soul and clear your path</h1>
         </div>
         <hr class="half-width-hr">
         <div class="ceremony-what">
@@ -29,7 +29,9 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
                     What
                 </h4>
                 <p class="normal-text">
-                   Soothe the soul and clear your path
+                   A soul soothing, spirit calming, path clearing workshop of joy babes! 
+                    This 1hr lecture style workshop will bring us together to close 2021 learning the lessons we require in order to achieve all we desire. Ooft.
+
                 </p>
             </div>
             <div class="ceremony-what-item">
