soothe your soul

--- a/src/site/2021-closing-ceremony.njk
+++ b/src/site/2021-closing-ceremony.njk
@@ -20,7 +20,7 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
     <!-- intro section -->
     <section class="services-intro testimonial-intro you-will-gain-section">
         <div class="home-sub-hero-content ceremony-sub-content">
-            <h1 class="sect-title about-title pink-text">Soothe the soul and clear your path</h1>
+            <h1 class="sect-title about-title pink-text">Soothe your soul and clear your path</h1>
         </div>
         <hr class="half-width-hr">
         <div class="ceremony-what">
